workload-best-practices/disallow-latest-image-tag/.chainsaw-test/invalid-latest-tag.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-latest-tag
spec:
  containers:
    - name: app
      image: nginx:latest
