workload-best-practices/disallow-latest-image-tag/.chainsaw-test/invalid-no-tag.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-no-tag
spec:
  containers:
    - name: app
      image: nginx
